feat: 커버 이미지 페이지 CSS 추가
요소 배치 및 정렬
커버 이미지 자르기
line-height 설정
- 모바일 화면 디자인과 줄 바꿈 위치가 다른 이슈 보류

--- a/css/base.css
+++ b/css/base.css
@@ -27,6 +27,7 @@ header {
 button {
   background-color: #d97652;
   color: #ffffff;
+  font-family: 'Pretendard-Regular';
   font-weight: 700;
   border-radius: 40px;
   padding: 15px 30px;
