--- a/css/mobile.css
+++ b/css/mobile.css
@@ -79,5 +79,82 @@ header {
 
 #cover-img-container > img {
   object-fit: cover;
+  object-position: top;
   width: inherit;
+  height: 100%;
+}
+
+article > div {
+  width: 326px;
+  height: 326px;
+  border-radius: 18px;
+}
+
+.thumbnail {
+  object-fit: cover;
+  width: inherit;
+  height: 100%;
+  object-position: center;
+  border-radius: 18px;
+  box-shadow: 10px 10px 20px 0 #00000040;
+}
+
+#main-thumbnail {
+  width: 326px;
+  height: 190px;
+  border-radius: 30px;
+}
+
+#main-thumbnail-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+#main-thumbnail-container > div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#main-thumbnail-container > div:nth-child(2) > p {
+  font-size: 14px;
+}
+
+#thumbnail-desc {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 40px;
+  gap: 30px;
+}
+
+.text-orange {
+  color: #d97652;
+}
+
+#thumbnail-group {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
+#more-container {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  align-items: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  border-bottom: solid #c4c4c4 1px;
+}
+
+#more-container > p {
+  font-size: 18px;
+  font-weight: 700;
 }
