--- a/css/web.css
+++ b/css/web.css
@@ -1,19 +1,20 @@
 html {
   font-size: 16px;
-  line-height: 1.25rem;
+  line-height: 1.25em;
 }
 
 h2 {
   font-size: 3rem;
-  line-height: 3.75rem;
+  line-height: 1.25em;
 }
 
 h3 {
   font-size: 2.25rem;
+  line-height: 1.25em;
 }
 
 p {
-  line-height: 1.25rem;
+  line-height: 1.25em;
 }
 
 nav {
@@ -80,5 +81,81 @@ header {
 
 #cover-img-container > img {
   object-fit: cover;
+  object-position: top;
   width: inherit;
+  height: 100%;
+}
+
+article > div {
+  width: 378px;
+  height: 378px;
+  border-radius: 30px;
+}
+
+.thumbnail {
+  object-fit: cover;
+  width: inherit;
+  height: 100%;
+  object-position: center;
+  border-radius: 30px;
+  box-shadow: 10px 10px 30px 0 #00000040;
+}
+
+#main-thumbnail {
+  width: 660px;
+  height: 390px;
+  border-radius: 30px;
+}
+
+#main-thumbnail-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 110px;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+#main-thumbnail-container > div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+#thumbnail-desc {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  gap: 40px;
+}
+
+.text-orange {
+  color: #d97652;
+}
+
+#thumbnail-group {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 72px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+#more-container {
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
+  align-items: center;
+  padding-top: 52px;
+  padding-bottom: 80px;
+  border-bottom: solid #c4c4c4 1px;
+}
+
+#more-container > p {
+  font-size: 1.5rem;
+  font-weight: 700;
 }
