feat: 지도 페이지 CSS 추가
지도 이미지 사이즈, 위치 조정
글 색상 및 크기 변경

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -158,3 +158,31 @@ article > div {
   font-size: 18px;
   font-weight: 700;
 }
+
+#map-section {
+  padding-top: 40px;
+}
+
+#map-section > h2 {
+  margin-bottom: 16px;
+}
+
+#map-section > p {
+  color: #606367;
+  font-weight: 500;
+  margin-bottom: 28px;
+}
+
+#map-container {
+  width: 326px;
+  height: 132px;
+  margin-bottom: 320px;
+}
+
+#map-img {
+  object-fit: cover;
+  width: 347.17px;
+  height: 100%;
+  object-position: -13px -8px;
+  border-radius: 12px;
+}
