feat: 푸터 이미지 페이지 CSS 추가
이미지와 색상 혼합 설정

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -186,3 +186,18 @@ article > div {
   object-position: -13px -8px;
   border-radius: 12px;
 }
+
+#footer-img-container {
+  width: 100%;
+  height: 240px;
+  mix-blend-mode: screen;
+  background-color: #f2e9d899;
+}
+
+#footer-img {
+  object-fit: cover;
+  object-position: 0 -30px;
+  width: inherit;
+  height: 100%;
+  mix-blend-mode: screen;
+}
