--- a/css/web.css
+++ b/css/web.css
@@ -188,3 +188,18 @@ article > div {
   object-position: -54px -34px;
   border-radius: 12px;
 }
+
+#footer-img-container {
+  width: 100%;
+  height: 340px;
+  mix-blend-mode: screen;
+  background-color: #f2e9d899;
+}
+
+#footer-img {
+  object-fit: cover;
+  object-position: 0 -580px;
+  width: inherit;
+  height: 100%;
+  mix-blend-mode: screen;
+}
