feat: 구독 폼 CSS 추가
웹/모바일 뷰에 따른 버튼 요소 설정
구독 폼 html 요소 위치 변경
absolute 배치로 요소 위에 배치
- absolute 없이 배치하고, 푸터 이미지를 조정하는 방법도 가능할 것으로 보인다.

--- a/css/web.css
+++ b/css/web.css
@@ -161,6 +161,7 @@ article > div {
 }
 
 #map-section {
+  position: relative;
   padding-top: 68px;
 }
 
@@ -202,4 +203,52 @@ article > div {
   width: inherit;
   height: 100%;
   mix-blend-mode: screen;
+}
+
+#subscribe-window {
+  position: absolute;
+  bottom: -300px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #263140;
+  color: #ffffff;
+  border-radius: 30px;
+  box-sizing: border-box;
+  width: 1280px;
+  padding: 50px 58px;
+  z-index: 1;
+}
+
+#subscribe-window > div:first-child {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  width: 470px;
+}
+
+#subscribe-window > div:first-child > p {
+  font-size: 14px;
+}
+
+#email-input {
+  display: flex;
+  align-items: center;
+  background-color: #ffffff;
+  width: 530px;
+  height: 60px;
+  border-radius: 60px;
+  padding-left: 28px;
+  padding-right: 6px;
+}
+
+#email-input > input {
+  border: none;
+  flex: 1;
+  margin-left: 16px;
+  margin-right: 16px;
+}
+
+#email-mobile-submit {
+  display: none;
 }
