--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,12 +1,12 @@
 html {
   font-size: 16px;
-  line-height: 1.25rem;
+  line-height: 1.25em;
 }
 
 h2,
 h3 {
   font-size: 1.5rem;
-  line-height: 1.875rem;
+  line-height: 1.25em;
 }
 
 nav {
@@ -160,6 +160,7 @@ article > div {
 }
 
 #map-section {
+  position: relative;
   padding-top: 40px;
 }
 
@@ -200,4 +201,63 @@ article > div {
   width: inherit;
   height: 100%;
   mix-blend-mode: screen;
+}
+
+#subscribe-window {
+  position: absolute;
+  bottom: -388px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #263140;
+  color: #ffffff;
+  border-radius: 30px;
+  box-sizing: border-box;
+  width: 326px;
+  height: 348px;
+  padding: 36px 32px;
+  z-index: 1;
+  gap: 30px;
+}
+
+#subscribe-window > div {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+#subscribe-window p {
+  font-size: 14px;
+}
+
+#email-input > svg {
+  width: 18px;
+  height: 18px;
+}
+
+#email-input {
+  display: flex;
+  align-items: center;
+  background-color: #ffffff;
+  width: 262px;
+  border-radius: 60px;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  padding-left: 16px;
+  padding-right: 6px;
+}
+
+#email-input > input {
+  border: none;
+  flex: 1;
+  margin-left: 14px;
+  margin-right: 14px;
+}
+
+#email-mobile-submit {
+  align-self: end;
+}
+
+#email-web-submit {
+  display: none;
 }
