feat: 스크롤 탑 버튼 CSS
커스텀 div로 디자인
hover 시 색상 변경 적용
임시적으로 position: fixed 설정
추후 javascript 적용 필요

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -261,3 +261,19 @@ article > div {
 #email-web-submit {
   display: none;
 }
+
+#hover-btn {
+  display: none;
+  /* display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  background-color: #f5f5f5;
+  border-radius: 50px;
+  border: 1px #767676 solid;
+  width: 50px;
+  height: 50px;
+  z-index: 2; */
+}
