--- a/css/web.css
+++ b/css/web.css
@@ -32,6 +32,10 @@ footer {
   padding-right: 320px;
 }
 
+main {
+  position: relative;
+}
+
 #drawer-open-btn,
 #drawer-close-btn {
   display: none;
@@ -251,4 +255,23 @@ article > div {
 
 #email-mobile-submit {
   display: none;
+}
+
+#hover-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  background-color: #f5f5f5;
+  border-radius: 50px;
+  border: 1px #c4c4c4 solid;
+  width: 50px;
+  height: 50px;
+  z-index: 2;
+}
+
+#hover-btn:hover > svg > path {
+  fill: #767676;
 }
