--- a/css/mobile.css
+++ b/css/mobile.css
@@ -34,6 +34,10 @@ footer {
   padding-right: 20px;
 }
 
+body {
+  position: relative;
+}
+
 section {
   padding-left: 32px;
   padding-right: 32px;
@@ -276,4 +280,50 @@ article > div {
   width: 50px;
   height: 50px;
   z-index: 2; */
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 90;
+  display: none; /* 모달창 열리면 display: block */
+  /* display: block; */
+}
+
+#modal {
+  width: 300px;
+  height: 300px;
+  border-radius: 30px;
+  box-shadow: 0px 0px 20px 0px #00000033;
+  background-image: url(../assets/images/modal_background.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: #f2e9d8;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 100;
+  display: none; /* 모달창 열리면 display: flex */
+  /* display: flex; */
+}
+
+#modal > img {
+  width: 60px;
+  height: 60px;
+  margin-bottom: 24px;
+}
+
+#modal > p {
+  font-size: 14px;
+  margin-top: 10px;
+  margin-bottom: 28px;
 }
