--- a/css/web.css
+++ b/css/web.css
@@ -32,6 +32,10 @@ footer {
   padding-right: 320px;
 }
 
+body {
+  position: relative;
+}
+
 main {
   position: relative;
 }
@@ -274,4 +278,47 @@ article > div {
 
 #hover-btn:hover > svg > path {
   fill: #767676;
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 90;
+  display: none; /* 모달창 열리면 display: block */
+  /* display: block; */
+}
+
+#modal {
+  width: 600px;
+  height: 400px;
+  border-radius: 30px;
+  box-shadow: 0px 0px 30px 0px #00000033;
+  background-image: url(../assets/images/modal_background.png);
+  background-size: cover;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 100;
+  display: none; /* 모달창 열리면 display: flex */
+  /* display: flex; */
+}
+
+#modal > img {
+  width: 110px;
+  height: 110px;
+  margin-bottom: 24px;
+}
+
+#modal > p {
+  font-size: 14px;
+  margin-top: 12px;
+  margin-bottom: 38px;
 }
