--- a/css/mobile.css
+++ b/css/mobile.css
@@ -34,6 +34,12 @@ footer {
   padding-right: 20px;
 }
 
+header {
+  position: sticky;
+  top: 0;
+  z-index: 10;
+}
+
 body {
   position: relative;
 }
