--- a/css/web.css
+++ b/css/web.css
@@ -46,12 +46,15 @@ main {
 }
 
 header {
+  position: sticky;
+  top: 0;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   padding-top: 26px;
   padding-bottom: 26px;
+  z-index: 10;
 }
 
 #nav-download-btn {
