feat: 스크롤 탑 버튼 기능 구현
스크롤 시 나타내는 기능
버튼이 footer 위까지만 가도록 제한하는 기능
클릭 시 최상단으로 부드럽게 스크롤하는 기능

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -272,7 +272,7 @@ article > div {
   display: none;
 }
 
-#hover-btn {
+#scroll-top-btn {
   display: none;
   /* display: flex;
   align-items: center;
