feat: 구독 폼 로직 구현
Subscribe 버튼 클릭 시 모달 창 띄우는 기능
이메일 유효성 검사 기능
모달 창의 버튼 클릭 시 form 제출 및 모달 창 닫기 기능

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -257,7 +257,7 @@ article > div {
   padding-right: 6px;
 }
 
-#email-input > input {
+#email-input > form > input {
   border: none;
   flex: 1;
   margin-left: 14px;
