--- a/css/web.css
+++ b/css/web.css
@@ -253,8 +253,13 @@ article > div {
   padding-right: 6px;
 }
 
-#email-input > input {
+#email-input > form > input {
   border: none;
+  flex: 1;
+}
+
+#email-input > form {
+  display: flex;
   flex: 1;
   margin-left: 16px;
   margin-right: 16px;
