fix: 모바일 화면 스크롤 탑 버튼 아이콘 숨김
모바일 화면에서 스크롤 탑 버튼의 아이콘 부분이 표시되는 문제 해결

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -288,6 +288,10 @@ article > div {
   z-index: 2; */
 }
 
+#scroll-top-btn > svg {
+  display: none;
+}
+
 #overlay {
   position: fixed;
   top: 0;
