feat: 모바일 뷰 sidebar CSS
sidebar 요소 배치
sidebar 이동 시 right 속성 수정하는 로직 구현 필요

--- a/css/web.css
+++ b/css/web.css
@@ -22,7 +22,7 @@ nav {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 30px;
+  gap: 49px;
 }
 
 header,
@@ -57,8 +57,9 @@ header {
   z-index: 10;
 }
 
-#nav-download-btn {
-  margin-left: 19px;
+#nav-link-group {
+  display: flex;
+  gap: 30px;
 }
 
 #header-logo {
