--- a/css/mobile.css
+++ b/css/mobile.css
@@ -10,7 +10,33 @@ h3 {
 }
 
 nav {
-  display: none;
+  position: fixed;
+  /* drawer 열리면 right: 0% 로 서서히 변화 */
+  right: -70%;
+  top: 0;
+  width: 70%;
+  height: 100%;
+  background-color: #263140;
+  color: #ffffff;
+}
+
+#drawer-close-btn {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+#nav-link-group {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-left: 50px;
+  margin-top: 120px;
+}
+
+#nav-download-btn {
+  margin-top: 50px;
+  margin-left: 40px;
 }
 
 p {
