fix: 웹 화면 크기에 따라 열 당 이미지 배치 개수 변경
썸네일 고양이 사진들 화면 크기에 따라 다른 열 개수 설정

--- a/css/web.css
+++ b/css/web.css
@@ -166,11 +166,30 @@ article .thumbnail {
 
 #thumbnail-group {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 72px;
+  gap: 3.75vw;
   padding-top: 48px;
   padding-bottom: 48px;
+}
+
+/* 768px보다 작을 때 */
+@media (max-width: 768px) {
+  #thumbnail-group {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* 768px ~ 1280px 사이일때 */
+@media (min-width: 768px) and (max-width: 1280px) {
+  #thumbnail-group {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+/* 1280px보다 클때 */
+@media (min-width: 1280px) {
+  #thumbnail-group {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
 
 #more-container {
