fix: 웹 화면 좌우 여백 비율적으로 수정
웹 화면 좌우 여백을 고정 크기 -> 비율 크기로 변경

--- a/css/web.css
+++ b/css/web.css
@@ -27,13 +27,13 @@ nav {
 
 header,
 footer {
-  padding-left: 320px;
-  padding-right: 320px;
+  padding-left: 16.7%;
+  padding-right: 16.7%;
 }
 
 section {
-  margin-left: 320px;
-  margin-right: 320px;
+  margin-left: 16.7%;
+  margin-right: 16.7%;
 }
 
 body {
@@ -74,8 +74,8 @@ header {
 #cover-section {
   margin-left: 0;
   margin-right: 0;
-  padding-left: 320px;
-  padding-right: 320px;
+  padding-left: 16.7%;
+  padding-right: 16.7%;
   display: flex;
   flex-direction: row;
   align-items: center;
