--- a/css/web.css
+++ b/css/web.css
@@ -301,10 +301,14 @@ article .thumbnail {
   padding-right: 6px;
 }
 
-#email-input-container > form {
+#subscribe-form {
   flex: 1 1;
   margin-left: 16px;
   margin-right: 16px;
+}
+
+#subscribe-form > input:focus {
+  outline: none;
 }
 
 #subscribe-email-input {
