fix: form 태그 제거
배포 환경 submit 이벤트 방지
서버 url로 전송하는 로직을 직접 구현하는 방향으로 변경

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -293,17 +293,14 @@ article .thumbnail {
   padding-right: 6px;
 }
 
-#subscribe-form {
+#subscribe-email-input {
   display: flex;
   margin-left: 14px;
   margin-right: 14px;
-}
-
-#subscribe-form > input {
   border: none;
 }
 
-#subscribe-form > input:focus {
+#subscribe-email-input {
   outline: none;
 }
 
@@ -311,7 +308,6 @@ article .thumbnail {
   display: flex;
   width: 100%;
   justify-content: end;
-  /* align-items: end; */
 }
 
 #email-web-submit {
