--- a/css/web.css
+++ b/css/web.css
@@ -301,22 +301,18 @@ article .thumbnail {
   padding-right: 6px;
 }
 
-#subscribe-form {
+#subscribe-email-input {
   flex: 1 1;
   margin-left: 16px;
   margin-right: 16px;
-}
-
-#subscribe-form > input:focus {
-  outline: none;
-}
-
-#subscribe-email-input {
-  flex: 1 1;
   border: none;
   width: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+#subscribe-email-input:focus {
+  outline: none;
 }
 
 #email-mobile-submit {
